# LabsADS

1/: CMakeLists.txt  matrix.c  utils.c
2a/: CMakeLists.txt  hub.c  main.c  queue.c
2a/include/: passenger.h  queue.h
2b/: CMakeLists.txt  array.c  utils.c
2b/include/: array.h  list.h
3a/: CMakeLists.txt  menu.c
3a/misc/: input.csv
3a/table/: table.c  table.h
3a/table/op/: delete.c  import.c  insert.c  print.c  search.c
3b/: CMakeLists.txt  utils.c
3b/include/: menu.h  utils.h
3b/table/: table.c  table.h
3b/table/op/: delete.c  import.c  insert.c  print.c  search.c
3c/: CMakeLists.txt  menu.c  utils.c
3c/include/: utils.h
3c/misc/: input.csv
3c/table/: table.c  table.h
3d/: CMakeLists.txt  main.c
3d/include/: menu.h
3d/table/: table.c  table.h
4a/: CMakeLists.txt  menu.c  utils.c
4a/include/: menu.h  utils.h
4a/misc/: concurrence.nsv  input.nsv
4a/tree/: tree.c  tree.h
4a/tree/op/: concurrence.c  delete.c  diff.c  import.c  insert.c  print.c  search.c  traverse.c
4b/: CMakeLists.txt  main.c  menu.c  utils.c
4b/include/: menu.h  utils.h
4b/misc/: input.nsv  text.txt
4b/tree/: tree.c  tree.h
4b/tree/op/: delete.c  diff.c  import.c  insert.c  print.c  search.c  traverse.c
5/: CMakeLists.txt  main.c  menu.c  utils.c
5/graph/: graph.c  graph.h
5/include/: menu.h  utils.h
5/misc/: input.txt  input_large.txt
5/queue/: queue.c  queue.h
Lab1/: CMakeLists.txt  main.c
Lab1/include/: matrix.h  utils.h
Lab2/: list.c  passenger.c
Lab2/include/: hub.h  utils.h
